fix spacing in menu

--- a/assets/scss/partials/menu.scss
+++ b/assets/scss/partials/menu.scss
@@ -146,10 +146,10 @@
 
     &, .menu-bottom-section ol {
         flex-direction: column;
-        gap: 30px;
+        gap: 15px;
 
         @include respond(xl) {
-            gap: 25px;
+            gap: 15px;
         }
     }
 
